--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ li:not(.target) {
   background-color: blue;
   
 } */
+/* 
+
+Variables
 
 :root {
   --awesomeColor: 1px solid red;
@@ -30,4 +33,12 @@ li:first-child a {
 
 :--headers{
   color: #8e44ad;
+} */
+
+@custom-media --ipad-size (450px <= width <= 850px);
+
+@media (--ipad-size) {
+  body {
+    background-color: red;
+  }
 }
