--- a/style.css
+++ b/style.css
@@ -1,44 +1,51 @@
-/* 
+/*
 
 Matches
 
-li:matches(:nth-child(even), .target) {
+ li:matches(:nth-child(even), .target) {
   background-color: blue;
-}
-
-*/
-
+} */
 
 /* 
 
-Not
+not
 
 li:not(.target) {
   background-color: blue;
-  
 } */
-/* 
+
+/*
 
 Variables
 
-:root {
+ :root {
   --awesomeColor: 1px solid red;
 }
 
 li:first-child a {
   border: var(--awesomeColor);
-}
+} */
+
+/* 
+
+Custom
 
 @custom-selector :--headers h1, h2, h3, h4, h5, h6;
 
-:--headers{
+:--headers {
   color: #8e44ad;
 } */
-
+/*
+Custom Media & Media Query Ranges
+ 
 @custom-media --ipad-size (450px <= width <= 850px);
 
 @media (--ipad-size) {
   body {
     background-color: red;
   }
+} */
+
+h1 {
+  color: color-mod(#f1c40f alpha(50%));
 }
